from matplotlib.figure import Figure
from matplotlib.backends.backend_tkagg import FigureCanvasTkAgg
import pandas as pd
import csv


class Model:
    """ A class for obtaining and handling the application's initial data """

    year = "ALL"
    quarter = "ALL"
    month = "ALL"
    years = ["ALL"]
    sales_data = []
    item_data = []
    employee_data = []
    daily_revenue = []
    explore = ""
    first = True


    def __init__(self):
        pass


    def read_data(self, file_name):
        """
        Reads the data from a CSV file into a list

        :param file_name: the name of the file to read
        :return: none
        """
        data = []
        with open(file_name, "r") as csvfile:
            reader = csv.reader(csvfile)
            for row in reader:
                data.append(row)

        if file_name == "data/Sales_Data.csv":
            self.sales_data = data.copy()
        elif file_name == "data/Item_Data.csv":
            self.item_data = data.copy()
        elif file_name == "data/Employee_Data.csv":
            self.employee_data = data.copy()


    def get_years(self):
        """
        Extracts all of the years present in the sales data

        :return: none
        """
        for x in self.sales_data:
            self.years.append(x[4][:4])
        self.years = list(dict.fromkeys(self.years))
        self.years.sort(reverse=True)


    def sort_sd_date(self):
        """
        Sorts the sales data by date

        :return: none
        """
        sd_frame = pd.DataFrame(self.sales_data, columns=["First Name", "Last Name", "Item", "Quantity", "Date"])
        sd_frame = sd_frame.sort_values("Date")
        sd_list = sd_frame.values.tolist()
        self.sales_data = sd_list.copy()


    def calc_total_sales(self):
        """
        Calculates the total revenue for each day

        :return: none
        """
        self.item_names = []
        for x in self.item_data:
            self.item_names.append(x[0])

        self.daily_revenue = []
        date = self.sales_data[0][4]
        revenue = 0

        for x in self.sales_data:
            if x[4] == date:
                index = self.item_names.index(x[2])
                revenue = revenue + int(x[3]) * int(self.item_data[index][2])
            else:
                self.daily_revenue.append(revenue)
                date = x[4]
                revenue = 0


    def calc_category_sales(self):
        """
        Calculates the total revenue for each category

        :return: none
        """
        category_names = ["Tables", "Chairs", "Mirrors", "Dressers", "Nightstands", "Cabinet Knobs", "Miscellaneous"]
        category_revenue = [0, 0, 0, 0, 0, 0, 0]
        item_names = []
        item_categories = []
        revenue = 0
        category = "Chairs"

        for x in self.item_data:
            item_names.append(x[0])

        for x in self.item_data:
            item_names.append(x[0])
            item_categories.append(x[1])

        for x in self.sales_data:
            location_item = item_names.index(x[2])
            category = item_categories[location_item]
            category_location = category_names.index(category)
            category_revenue[category_location] = category_revenue[category_location] + int(x[3]) * int(
                self.item_data[location_item][2])

        self.category_names = category_names.copy()
        self.category_revenue = category_revenue.copy()


    def calc_employee_sales(self):
        """
        Calculates the total revenue generated by each employee

        :return: none
        """
        item_names = []
        for x in self.item_data:
            item_names.append(x[0])

        self.employee_names = []
        for x in self.employee_data:
            self.employee_names.append(x[:2])

        employee_sales = [0] * len(self.employee_names)
        for x in range(len(self.sales_data)):
            name = self.sales_data[x][:2]
            employee_location = self.employee_names.index(name)
            item_location = item_names.index(self.sales_data[x][2])
            total_price = int(self.sales_data[x][3]) * int(self.item_data[item_location][2])
            employee_sales[employee_location] = employee_sales[employee_location] + total_price

        employee_rev = []
        for x in range(len(self.employee_names)):
            employee_rev.append(self.employee_names[x])
            employee_rev[x].append(employee_sales[x])
        self.er_frame = pd.DataFrame(employee_rev, columns=["First Name", "Last Name", "Sales"])
        self.er_frame = self.er_frame.sort_values("Sales", ascending=False)


    def calc_item_sales(self):
        """
        Calcuates the total revenue generated by each item

        :return:
        """
        item_names = []
        for x in self.item_data:
            item_names.append(x[0])

        item_sales = [0] * len(item_names)
        for x in range(len(self.sales_data)):
            location = item_names.index(self.sales_data[x][2])
            item_sales[location] = item_sales[location] + int(self.sales_data[x][3]) * int(self.item_data[location][2])

        item_revenue = []
        for x in range(len(self.item_data)):
            item_revenue.append([item_names[x]])
            item_revenue[x].append(item_sales[x])
        self.item_frame = pd.DataFrame(item_revenue, columns=["Item", "Sales"])
        self.item_frame = self.item_frame.sort_values("Sales", ascending=False)


    def calc_location_sales(self):
        """
        Calculates the total revenue generated by each location

        :return:
        """
        item_names = []
        for x in self.item_data:
            item_names.append(x[0])

        locations = []
        employee_names = []
        for x in self.employee_data:
            locations.append(x[3])
            employee_names.append(x[:2])
        locations = list(dict.fromkeys(locations))

        location_sales = [0] * len(locations)
        for x in range(len(self.sales_data)):
            employee_name = self.sales_data[x][:2]
            branch_index_ed = employee_names.index(employee_name)
            branch_name = self.employee_data[branch_index_ed][3]
            branch_index = locations.index(branch_name)
            item_location = item_names.index(self.sales_data[x][2])
            total_price = int(self.sales_data[x][3]) * int(self.item_data[item_location][2])
            location_sales[branch_index] = location_sales[branch_index] + total_price
        self.locations = locations
        self.location_sales = location_sales


    def init_left_plot(self):
        figure = Figure(figsize=(2, 1), dpi=100)
        plot = figure.add_subplot(1, 1, 1)
        plot.axis([0, len(self.daily_revenue), min(self.daily_revenue) - 5000, max(self.daily_revenue) + 5000])
        x = list(range(1, len(self.daily_revenue) + 1))
        y = self.daily_revenue.copy()
        plot.bar(x, y, width=1, color="dodgerblue")
        #canvas = FigureCanvasTkAgg(figure, self.left_frame)
        #canvas.get_tk_widget().pack(fill="both", expand=True)
        return figure


#        employee_list = tk.Listbox(self.q1_right)
#        employee_list.pack(fill="both", expand=True)
#        er_list = self.er_frame.values.tolist()
#        for x in range(len(self.er_frame)):
#            item = str(x + 1) + ". " + str(er_list[x][0]) + " " + str(er_list[x][1]) + "   ($" + str(er_list[x][2]) + ")"
#            employee_list.insert(tk.END, item)


#        item_list = tk.Listbox(self.q2_right)
#        item_list.pack(fill="both", expand=True)
#        items_list = self.model.item_frame.values.tolist()
#        for x in range(len(items_list)):
#            item = str(x + 1) + ". " + str(items_list[x][0]) + "  ($" + str(items_list[x][1]) + ")"
#            item_list.insert(END, item)


    def init_q3_plot(self):
        figure = Figure(figsize=(2, 1), dpi=100)
        plot = figure.add_subplot(1, 1, 1)
        x = [None] * len(self.category_names)
        for z in range(len(self.category_names)):
            x[z] = self.category_names[z][:3]
        y = self.category_revenue.copy()
        plot.bar(x, y, width=0.9, log=False, color="dodgerblue")
#        canvas = FigureCanvasTkAgg(figure, self.q3_right)
#        canvas.get_tk_widget().pack(fill="both", expand=True)
        return figure


    def init_q4_plot(self):
        figure = Figure(figsize=(2, 1), dpi=100)
        plot = figure.add_subplot(1, 1, 1)
        plot.axis([-1, len(self.locations), min(self.location_sales) - 100000, max(self.location_sales) + 100000])
        x = self.locations
        y = self.location_sales
        plot.bar(x, y, width=0.9, log=False, color="dodgerblue")
#        canvas = FigureCanvasTkAgg(figure, self.q4_right)
#        canvas.get_tk_widget().pack(fill="both", expand=True)
        return figure

